# pantry

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config-prod.toml  config.toml  docker-compose.yml  pantry.db  pantry.db-shm  pantry.db-wal
.sqlx/: query-4dbe81342a7fcbfdfeb9484e84101565de42c5351ff5ed96ebca4c6d43a21e85.json  query-5ac9527700e5c6819a7d4a295639e748abb170023c46cd37f0b76f67a7d3ca85.json  query-5c448f13548477c7e1cdc259e142955277e235a7b7983925585d6012063170c2.json  query-61b1bf12278c0864f3ae4f588c190a612d22f853968cb26ec3c52c6328e73c7f.json  query-fbf0afbf5ecec67e6c5acf03ac33c6a3fd086e3e398765786773ccfd3be8e4b1.json
media-center/: Cargo.toml  media.db  media.db-shm  media.db-wal
media-center/migrations/: 20250810135831_init.sql
media-center/src/: main.rs
media-center/templates/: file_navigator.html
migrations/: 20250703103738_items.sql
src/: configuration.rs  create_item.rs  delete_item.rs  index.rs  item.rs  main.rs  state_items.rs  store.rs  update_item.rs
templates/: index.html  state_items.html  state_items_error.html  update_item_form.html
