[package]
name = "pantry"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["macros"] }
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
thiserror = "2.0.12"
tokio = { version = "1.46.0", features = ["rt-multi-thread", "signal", "tokio-macros"] }
tower-http = { version = "0.6.6", features = ["timeout", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
